# NUC029LAN_Test

./: .gitignore  .gitmodules  README.md  main.c  makefile
rust/: Cargo.toml  memory.x
rust/.cargo/: config.toml
rust/src/: main.rs
